--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "types": [
       "webpack-env"
     ],
+    "typeRoots": ["./node_modules/@types", "./typings"],
     "paths": {
       "@/*": [
         "src/*"
