--- a/package.json
+++ b/package.json
@@ -8,27 +8,38 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "4.3.1",
+    "bootstrap-vue": "2.1.0",
     "core-js": "^3.3.2",
+    "lodash": "^4.17.15",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
+    "vue-router": "^3.1.3",
     "vuex": "^3.0.1",
     "vuex-module-decorators": "0.11.0"
   },
   "devDependencies": {
     "@types/dom-inputevent": "1.0.5",
+    "@types/lodash": "4.14.149",
+    "@typescript-eslint/eslint-plugin": "2.8.0",
+    "@typescript-eslint/parser": "2.8.0",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-plugin-typescript": "^4.0.0",
     "@vue/cli-plugin-vuex": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
-    "@vue/eslint-config-airbnb": "^4.0.0",
-    "@vue/eslint-config-typescript": "^4.0.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "@vue/eslint-config-standard": "5.0.0",
+    "@vue/eslint-config-typescript": "5.0.0",
+    "eslint": "^6.6.0",
+    "eslint-plugin-node": "10.0.0",
+    "eslint-plugin-vue": "6.0.1",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-standard": "4.0.1",
+    "eslint-plugin-import": "2.18.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
-    "typescript": "~3.5.3",
+    "typescript": "3.7.2",
     "vue-template-compiler": "^2.6.10"
   }
 }
